--- a/Track.html
+++ b/Track.html
@@ -30,7 +30,7 @@
 
     
 
-    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top collapsed bg-color transparent">
+    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <div class="hamburger">
                 <span></span>
@@ -62,17 +62,13 @@
                         About Us
                     </a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn">
-                <a class="btn btn-sm btn-primary display-4" href="https://mobirise.com">
-                    <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>
-                    Try It Now!
-                </a>
-            </div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://mobirise.com">
+                    <span class="mbri-save mbr-iconfont mbr-iconfont-btn "><br></span></a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="features8 cid-rdUviOFUpe mbr-parallax-background" id="features8-4">
+<section class="engine"><a href="https://mobirise.info/f">simple web maker</a></section><section class="features8 cid-rdUviOFUpe mbr-parallax-background" id="features8-4">
 
     
 
@@ -160,7 +156,7 @@
                     <div data-form-alert="" hidden="" class="align-center">Thanks for filling out the form!</div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="hx2JkB27ZKOc357ZrBi9Aa/T3trbT4boVDBWR1ho33CbjLTaO0GLmq6Pr17rNogqKBSkH9Xkd+Bc1P0VUg7NVjX+2+g3Ei2Jo3/xHKn/O0Cdsl1141PcLGC7SII112hI" data-form-email="true">
+                        <input type="hidden" value="wzXo2mxfHM+m3ssgQAs06ZzkOQduqZ4n2MTe4RaJ5lKwIzZwzMjDgypGkjGKoZCGSfBqMaCOxvy5qXQHZ+4uJDcg3F8FvKYk0Ev64HEg9RHUXpyEMaUI8oEoJcECGrOs" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="THANK YOU SO MUCH" id="email-footer4-8">
                         </div>
