--- a/Endtime.html
+++ b/Endtime.html
@@ -44,14 +44,14 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="mbr-section article content10 cid-rfv03hoavs" id="content10-g">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="mbr-section article content10 cid-rfv03hoavs" id="content10-g">
     
      
 
     <div class="container">
         <div class="inner-container" style="width: 66%;">
             <hr class="line" style="width: 25%;">
-            <div class="section-text align-center mbr-white mbr-fonts-style display-2">(Dan 9:1 ESV)
+            <div class="section-text align-center mbr-white mbr-fonts-style display-5">(Dan 9:1 ESV)
 <div>In the first year of Darius the son of Ahasuerus, by descent a Mede, who was made king over the realm of the Chaldeans--
 </div><div>
 </div><div>(Dan 9:2 ESV)
