--- a/flyers.html
+++ b/flyers.html
@@ -47,7 +47,7 @@
                          <img src="assets/images/logo-122x122.png" alt="PMCC 4th Watch Sydney" title="Pentecostal Missionary of Christ(4th Watch) Sydney" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="http://www.pmcc4w.org">PMCC 4th Watch Sydney</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="http://www.pmcc4w.org" target="_blank">PMCC 4th Watch Sydney</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best free website templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-rmUheU4GWY" id="gallery2-c">
+<section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-rmUheU4GWY" id="gallery2-c">
 
     
 
@@ -152,7 +152,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="CPYlnxX/ykTgCYVAblN031J1oWMiedtEFE6jLRNkdyscvGqGFC6eUn2zDs5ONepPGUF4Nn6kL9Ec8nMcFsA/2Qm0hGx6vDk/lfX3Jgvf6ogr2d6v7xq1ESmSXNxkCL+z">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BGLILEgfGT06mIiKVQAa0FaAY/Nd3HMUNWbUcEzQ8NKhvMV2eWxZkEEPa/Fr7XgNZFMInNS+syJEkOf5Fj5S/PY00KiaBxDSC9LFlssNpZICwiWJ7h964xp6GBKM7yMN">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
