--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                          <img src="assets/images/logo-122x122.png" alt="PMCC 4th Watch Sydney" title="Pentecostal Missionary of Christ(4th Watch) Sydney" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="http://www.pmcc4w.org">PMCC 4th Watch Sydney</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="http://www.pmcc4w.org" target="_blank">PMCC 4th Watch Sydney</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
